--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" type="image/svg" href="{{ "/assets/img/logo_square.svg" | relative_url }}" />
   </head>
   <body class="bg-gray-100 text-gray-800">
-    <nav class="relative flex w-full flex-wrap items-center justify-between bg-black py-2 text-white shadow-lg hover:text-neutral-700 focus:text-neutral-700 lg:py-4">
+    <nav class="relative flex w-full flex-wrap items-center justify-between bg-black py-2 text-white shadow-lg lg:py-4">
       <div class="flex w-full flex-wrap items-center justify-between px-3">
         <div>
-          <a class="mx-2 my-1 flex items-center text-white hover:text-neutral-900 focus:text-neutral-900 lg:mb-0 lg:mt-0" href="#">
+          <a class="mx-4 flex items-center text-white hover:text-neutral-900 focus:text-neutral-900 lg:mb-0 lg:mt-0" href="#">
             <img
               class="mr-0"
               src="{{ "/assets/img/logo.svg" | relative_url }}"
@@ -21,18 +21,32 @@
             <i class="font-medium text-white">comets for better transit.</i>
           </a>
         </div>
+        <div class="flex items-center justify-center text-xl">
+          <a href="{{ "/index.html" | relative_url }}" class="p-4 hover:underline">Home</a>
+          <a href="{{ "/about.html" | relative_url }}" class="p-4 hover:underline">About</a>
+          <a href="{{ "/contact.html" | relative_url }}" class="p-4 pr-12 hover:underline">Contact</a>
+        </div>
       </div>
     </nav>
 
-    {{ content }}
+    <div class="relative">
+      <div class="min-h-[312px] bg-fit bg-fixed bg-no-repeat w-full" style="background-image:url('{{ "/assets/img/bg.jpg" | relative_url }}')"></div>
+      <div class="text-xl md:text-4xl text-center leading-snug font-mono w-fit shadow-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mx-auto py-6 px-12 bg-black text-white">
+        {{ page.banner_text }}
+      </div>
+    </div>
 
-    <footer class="flex justify-center bg-black text-center text-white lg:text-left">
-      <div class="flex items-center justify-between w-1/2 mx-10 py-9">
-        <div class="mx-6">
-          <span>bettertransit@commetsfor.org</span>
+    <div class="max-w-[80%] mx-auto my-10 container">
+      {{ content }}
+    </div>
+
+    <footer class="bg-black text-white">
+      <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5">
+        <div class="my-4">
+          <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
         </div>
-        <div class="flex items-center justify-center mx-6">
-          <a href="#!" class="mx-3">
+        <div class="flex items-center justify-center my-3">
+          <a href="https://www.instagram.com/cometsforbettertransit" class="mx-3">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4"
@@ -41,7 +55,7 @@
               <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
             </svg>
           </a>
-          <a href="#!" class="mx-3">
+          <a href="https://www.facebook.com/people/CometsFor-BetterTransit/pfbid02aypwNxQA9yhSLuH2RqJxA1jBkvJL9njny1b6dNbEVRb7yQaytC7DbyzN52shU2QGl/?sk=about" class="mx-3">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4"
@@ -50,7 +64,7 @@
               <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
             </svg>
           </a>
-          <a href="#!" class="mx-3">
+          <a href="https://twitter.com/CometsFor" class="mx-3">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4"
