Add content to resources page, contact

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="max-w-[80%] mx-auto my-10 flex-grow container">
+      <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         {{ content }}
       </div>
 
