--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
           This website is published by Comets for Better Transit, a registered student organization.
           This website is not an official publication of UT Dallas and does not represent the views of the university or its officers.
           The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University.
-          Students with disabilities needing special assistance to attend please call (972-883-2946).
+          Students with disabilities needing special assistance to attend events please call (972-883-2946).
           Texas Relay Operation: 1-800-RELAYTX.
         </div>
 
